Updated Galician translation

--- a/po/gl.po
+++ b/po/gl.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-06-21 07:26+0300\n"
-"PO-Revision-Date: 2006-06-06 21:25+0200\n"
+"PO-Revision-Date: 2006-06-21 11:23+0200\n"
 "Last-Translator: Jacobo Tarrío <jtarrio@debian.org>\n"
 "Language-Team: Galician <trasno@ceu.fi.udc.es>\n"
 "MIME-Version: 1.0\n"
@@ -485,9 +485,9 @@ msgstr ""
 "engadir un espazo"
 
 #: lib/fields.c:413 lib/fields.c:416
-#, fuzzy, c-format
+#, c-format
 msgid "`%s' field, reference to `%.255s': version contains `%c'"
-msgstr "campo \"%s\", referencia a \"%.255s\": a versión contén \"(\""
+msgstr "campo \"%s\", referencia a \"%.255s\": a versión contén \"%c\""
 
 #: lib/fields.c:419
 #, c-format
@@ -4447,30 +4447,30 @@ msgstr "probe a borrar %s"
 
 #: scripts/cleanup-info.pl:107 scripts/install-info.pl:312
 #: scripts/update-alternatives.pl:211
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to open %s: %s"
-msgstr "non se pode pechar %s: %s"
+msgstr "non se pode abrir %s: %s"
 
 #: scripts/cleanup-info.pl:109 scripts/install-info.pl:482
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to create %s: %s"
-msgstr "non se pode eliminar %s: %s"
+msgstr "non se pode crear %s: %s"
 
 #: scripts/cleanup-info.pl:120 scripts/install-info.pl:485
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to write %s: %s"
-msgstr "non se pode eliminar %s: %s"
+msgstr "non se pode escribir en %s: %s"
 
 #: scripts/cleanup-info.pl:160 scripts/install-info.pl:165
 #: scripts/install-info.pl:207 scripts/install-info.pl:314
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to read %s: %s"
-msgstr "non se pode eliminar %s: %s"
+msgstr "non se pode ler %s: %s"
 
 #: scripts/cleanup-info.pl:161 scripts/install-info.pl:315
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to close %s after read: %s"
-msgstr "peche de %s trala lectura: %s"
+msgstr "non se pode pechar %s trala lectura: %s"
 
 #: scripts/cleanup-info.pl:165 scripts/install-info.pl:486
 #: scripts/update-alternatives.pl:472
@@ -4479,19 +4479,19 @@ msgid "unable to close %s: %s"
 msgstr "non se pode pechar %s: %s"
 
 #: scripts/cleanup-info.pl:171 scripts/install-info.pl:490
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to backup old %s, giving up: %s"
 msgstr "non se pode copiar o ficheiro %s antigo, abórtase: %s"
 
 #: scripts/cleanup-info.pl:174
-#, fuzzy, perl-format
+#, perl-format
 msgid "failed to install %s; it will be left as %s: %s"
-msgstr "%s: non se puido instalar %s; déixase coma %s: %s"
+msgstr "non se puido instalar %s; hase deixar coma %s: %s"
 
 #: scripts/cleanup-info.pl:178
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s: unable to unlock %s: %s"
-msgstr "%s: non se puido desbloquear %s: %s"
+msgstr "%s: non se pode desbloquear %s: %s"
 
 #: scripts/dpkg-divert.pl:12 scripts/update-alternatives.pl:33
 #, perl-format
@@ -4568,18 +4568,18 @@ msgid "two modes specified: %s and --%s"
 msgstr "especificáronse dous modos: %s e --%s"
 
 #: scripts/dpkg-divert.pl:97
-#, fuzzy, perl-format
+#, perl-format
 msgid "--%s needs a divert-to argument"
-msgstr "--divert precisa dun argumento que indique onde desviar"
+msgstr "--%s precisa dun argumento que indique onde desviar"
 
 #: scripts/dpkg-divert.pl:99
 msgid "divert-to may not contain newlines"
 msgstr "o destino do desvío non pode conter saltos de liña"
 
 #: scripts/dpkg-divert.pl:101
-#, fuzzy, perl-format
+#, perl-format
 msgid "--%s needs a <package> argument"
-msgstr "--package precisa dun argumento de nome de paquete"
+msgstr "--%s precisa dun argumento de nome de paquete"
 
 #: scripts/dpkg-divert.pl:103
 msgid "package may not contain newlines"
@@ -4587,9 +4587,9 @@ msgstr "o nome do paquete non pode conter saltos de liña"
 
 #: scripts/dpkg-divert.pl:105 scripts/dpkg-statoverride.pl:74
 #: scripts/update-alternatives.pl:152 scripts/update-alternatives.pl:155
-#, fuzzy, perl-format
+#, perl-format
 msgid "--%s needs a <directory> argument"
-msgstr "--altdir precisa dun argumento de directorio"
+msgstr "--%s precisa dun argumento de directorio"
 
 #: scripts/dpkg-divert.pl:108 scripts/dpkg-statoverride.pl:86
 #: scripts/update-alternatives.pl:160
@@ -4612,9 +4612,9 @@ msgstr "falla o nome do paquete"
 
 #: scripts/dpkg-divert.pl:125 scripts/dpkg-divert.pl:153
 #: scripts/dpkg-divert.pl:195 scripts/dpkg-statoverride.pl:144
-#, fuzzy, perl-format
+#, perl-format
 msgid "--%s needs a single argument"
-msgstr "--add precisa dun só argumento"
+msgstr "--%s precisa dun só argumento"
 
 #: scripts/dpkg-divert.pl:127 scripts/dpkg-divert.pl:131
 #, perl-format
@@ -4838,9 +4838,8 @@ msgid "An override for \"%s\" already exists, "
 msgstr "Xa existe unha substitución para \"%s\", "
 
 #: scripts/dpkg-statoverride.pl:124
-#, fuzzy
 msgid "but --force specified so will be ignored."
-msgstr "pero indicouse --force, así que se ignora."
+msgstr "pero indicouse --force, así que se ha ignorar."
 
 #: scripts/dpkg-statoverride.pl:126
 msgid "aborting"
@@ -4959,9 +4958,9 @@ msgstr ""
 "  --version                amosa a versión.\n"
 
 #: scripts/install-info.pl:97
-#, fuzzy, perl-format
+#, perl-format
 msgid "could not open stderr for output! %s"
-msgstr "Non se puido abrir stderr para saída. %s"
+msgstr "non se puido abrir stderr para saída. %s"
 
 #: scripts/install-info.pl:101
 #, perl-format
@@ -4969,9 +4968,9 @@ msgid "%s: --section needs two more args"
 msgstr "%s: --section precisa de dous ou máis argumentos"
 
 #: scripts/install-info.pl:107
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s: option --%s is deprecated (ignored)"
-msgstr "%s: %s está a extinguir (omítese)"
+msgstr "%s: a opción --%s está a extinguir (omítese)"
 
 #: scripts/install-info.pl:133
 #, perl-format
@@ -4994,9 +4993,8 @@ msgid "%s: warning, ignoring confusing INFO-DIR-ENTRY in file."
 msgstr "%s: aviso, omítese a INFO-DIR-ENTRY confusa do ficheiro."
 
 #: scripts/install-info.pl:200
-#, fuzzy
 msgid "invalid info entry"
-msgstr "%s: Entrada de info non válida"
+msgstr "entrada de info non válida"
 
 #: scripts/install-info.pl:226
 #, perl-format
@@ -5093,24 +5091,24 @@ msgid "%s: no entry for file `%s'"
 msgstr "%s: non hai unha entrada para o ficheiro \"%s\""
 
 #: scripts/install-info.pl:493
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to install new %s: %s"
-msgstr "non se pode instalar %s coma %s: %s"
+msgstr "non se pode instalar o novo %s: %s"
 
 #: scripts/install-info.pl:496
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to unlock %s: %s"
-msgstr "non se pode pechar %s: %s"
+msgstr "non se pode desbloquear %s: %s"
 
 #: scripts/install-info.pl:498
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s: could not backup %s in %s: %s"
 msgstr "%s: non se puido copiar %s en %s: %s"
 
 #: scripts/install-info.pl:515
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to read %s: %d"
-msgstr "non se pode eliminar %s: %s"
+msgstr "non se pode ler %s: %d"
 
 #: scripts/install-info.pl:519
 #, perl-format
@@ -5128,7 +5126,7 @@ msgstr ""
 "Copyright (C) 2000-2002 Wichert Akkerman."
 
 #: scripts/update-alternatives.pl:51
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "Usage: %s [<option> ...] <command>\n"
 "\n"
@@ -5186,11 +5184,14 @@ msgstr ""
 "<nome>.\n"
 "  --all                    executa --config en tódalas alternativas.\n"
 "\n"
-"<nome> é o nome en /etc/alternatives.\n"
-"<ruta> é o nome ao que se refire.\n"
 "<ligazón> é a ligazón que apunta a /etc/alternatives/<nome>.\n"
-"<prioridade> é un número enteiro; escóllense as opcións con números "
-"maiores.\n"
+"  (p. ex. /usr/bin/pager)\n"
+"<nome> é o nome mestre deste grupo de ligazóns.\n"
+"  (p. ex. pager)\n"
+"<ruta> é a ubicación dun dos ficheiros destino alternativos.\n"
+"  (p. ex. /usr/bin/less)\n"
+"<prioridade> é un número enteiro; as opcións con números maiores teñen máis\n"
+"  prioridade no modo automático.\n"
 "\n"
 "Opcións:\n"
 "  --altdir <directorio>    cambia o directorio de alternativas.\n"
