--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-21  Jacobo Tarrio  <jtarrio@debian.org>
+
+	* gl.po: Updated to 916t.
+
 2006-06-21  Guillem Jover  <guillem@debian.org>
 
 	* dpkg.pot: Regenerated.
