Add new '--umask' option to start-stop-daemon. Closes: #368003

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,7 @@ dpkg (1.13.22~) UNRELEASED; urgency=low
     backward compatibility information and give some examples.
     Thanks for the initial suggestions to Junichi Uekawa. Closes: #370830
   * Modified some strings to be able to merge them in the .pot files.
+  * Add new '--umask' option to start-stop-daemon. Closes: #368003
   
   [ Frank Lichtenheld ]
   * dpkg-source issued spurious warnings about fields defined with
