--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,10 @@
+2006-06-21  Guillem Jover  <guillem@debian.org>
+
+	* C/start-stop-daemon.8: Document the new '--umask' option.
+	* po4a/start-stop-daemon.8/po/start-stop-daemon.8.pot: Regenerated.
+	Former completed translations become 63t2f.
+	* po4a/start-stop-daemon.8/po/*.po: Merge with pot file.
+
 2006-06-20  Nicolas Francois  <nicolas.francois@centraliens.net>
 
 	* po4a/*/po/*.pot: Regenerated.
