--- a/man/C/start-stop-daemon.8
+++ b/man/C/start-stop-daemon.8
@@ -228,6 +228,9 @@ code for it to do this itself.
 \fB\-N\fP|\fB\-\-nicelevel\fP \fIint\fP
 This alters the priority of the process before starting it.
 .TP
+\fB\-k\fP|\fB\-\-umask\fP \fImask\fP
+This sets the umask of the process before starting it.
+.TP
 .BR \-m | \-\-make\-pidfile
 Used when starting a program that does not create its own pid file. This
 option will make
