Tighten the scope for two global variables by moving them to parse_options.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-06-21  Guillem Jover  <guillem@debian.org>
 
+	* utils/start-stop-daemon.c (signal_str, schedule_str): Move
+	variables inside ...
+	(parse_options): ... here.
+
+2006-06-21  Guillem Jover  <guillem@debian.org>
+
 	* utils/start-stop-daemon.c (umask_value): New variable.
 	(do_help): Print information about the new '--umask' option.
 	(parse_umask): New function.
