--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-06-21  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Release 1.13.22.
+
+2006-06-21  Guillem Jover  <guillem@debian.org>
+
 	* utils/start-stop-daemon.c (signal_str, schedule_str): Move
 	variables inside ...
 	(parse_options): ... here.
