--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.13.22~) UNRELEASED; urgency=low
+dpkg (1.13.22) unstable; urgency=low
 
   [ Guillem Jover ]
   * Version the po4a Build-Depends to >= 0.23 as we are using options
@@ -20,7 +20,7 @@ dpkg (1.13.22~) UNRELEASED; urgency=low
     Thanks for the initial suggestions to Junichi Uekawa. Closes: #370830
   * Modified some strings to be able to merge them in the .pot files.
   * Add new '--umask' option to start-stop-daemon. Closes: #368003
-  
+
   [ Frank Lichtenheld ]
   * dpkg-source issued spurious warnings about fields defined with
     XB-. They now get correctly suppressed. Closes: #374154
@@ -48,11 +48,11 @@ dpkg (1.13.22~) UNRELEASED; urgency=low
 
   [ Christian Perrier ]
   * Typo fix in update-alternatives ("alternativse"). Thanks to Eddy Petrisor
-    for spotting it. Translations unfuzzied
+    for spotting it. Translations unfuzzied.
   * Make similar messages in dpkg-statoverride and dpkg-divert exactly similar
-    Thanks to Eddy Petriso for spotting them, again
+    Thanks to Eddy Petriso for spotting them, again.
 
- -- Christian Perrier <bubulle@debian.org>  Sat, 17 Jun 2006 07:31:42 +0200
+ -- Guillem Jover <guillem@debian.org>  Wed, 21 Jun 2006 18:03:29 +0300
 
 dpkg (1.13.21) unstable; urgency=low
 
