--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+dpkg (1.13.23~) UNRELEASED; urgency=low
+
+
+ -- Guillem Jover <guillem@debian.org>  Wed, 21 Jun 2006 18:23:39 +0300
+
 dpkg (1.13.22) unstable; urgency=low
 
   [ Guillem Jover ]
