--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06022 Bart Cornelis <cobaco@skolelinux.no>
+
+	* nl.po: Updated Dutch translation
+
 2006-06-21  Jacobo Tarrio  <jtarrio@debian.org>
 
 	* gl.po: Updated to 916t.
