--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-27  SZERVÁC Attila  <sas@321.hu>
+
+	* hu.po: Updated to 716t.
+
 2006-06022 Bart Cornelis <cobaco@skolelinux.no>
 
 	* nl.po: Updated Dutch translation
