--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   [ Updated dpkg Translations ]
   * Dutch (Bart Cornelis).
   * Hungarian (SZERVÁC Attila).
+  * Romanian (Eddy Petrişor).
 
  -- Guillem Jover <guillem@debian.org>  Wed, 21 Jun 2006 18:23:39 +0300
 
