French translation updated (new maintainer)

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * Dutch (Bart Cornelis).
   * Hungarian (SZERVÁC Attila).
   * Romanian (Eddy Petrişor).
+  * French (Frédéric Bothamy).
 
  -- Guillem Jover <guillem@debian.org>  Wed, 21 Jun 2006 18:23:39 +0300
 
