--- a/po/fr.po
+++ b/po/fr.po
@@ -24,7 +24,7 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-06-21 07:26+0300\n"
-"PO-Revision-Date: 2006-06-08 11:18+0200\n"
+"PO-Revision-Date: 2006-06-22 20:16+0200\n"
 "Last-Translator: Frédéric Bothamy <frederic.bothamy@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -543,9 +543,9 @@ msgstr ""
 "plutôt un espace"
 
 #: lib/fields.c:413 lib/fields.c:416
-#, fuzzy, c-format
+#, c-format
 msgid "`%s' field, reference to `%.255s': version contains `%c'"
-msgstr "champ « %s », référence à « %.255s » : version contenant « ( »"
+msgstr "champ « %s », référence à « %.255s » : version contenant « %c »"
 
 #: lib/fields.c:419
 #, c-format
@@ -4609,30 +4609,30 @@ msgstr "tentative de suppression de %s"
 
 #: scripts/cleanup-info.pl:107 scripts/install-info.pl:312
 #: scripts/update-alternatives.pl:211
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to open %s: %s"
-msgstr "impossible de fermer %s : %s"
+msgstr "impossible d'ouvrir %s : %s"
 
 #: scripts/cleanup-info.pl:109 scripts/install-info.pl:482
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to create %s: %s"
-msgstr "impossible de supprimer %s : %s"
+msgstr "impossible de créer %s : %s"
 
 #: scripts/cleanup-info.pl:120 scripts/install-info.pl:485
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to write %s: %s"
-msgstr "impossible de supprimer %s : %s"
+msgstr "impossible d'écrire %s : %s"
 
 #: scripts/cleanup-info.pl:160 scripts/install-info.pl:165
 #: scripts/install-info.pl:207 scripts/install-info.pl:314
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to read %s: %s"
-msgstr "impossible de supprimer %s : %s"
+msgstr "impossible de lire %s : %s"
 
 #: scripts/cleanup-info.pl:161 scripts/install-info.pl:315
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to close %s after read: %s"
-msgstr "fermeture de %s après lecture : %s"
+msgstr "fermeture de fermer %s après lecture : %s"
 
 #: scripts/cleanup-info.pl:165 scripts/install-info.pl:486
 #: scripts/update-alternatives.pl:472
@@ -4641,17 +4641,17 @@ msgid "unable to close %s: %s"
 msgstr "impossible de fermer %s : %s"
 
 #: scripts/cleanup-info.pl:171 scripts/install-info.pl:490
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to backup old %s, giving up: %s"
 msgstr "impossible de sauvegarder l'ancien %s, abandon : %s"
 
 #: scripts/cleanup-info.pl:174
-#, fuzzy, perl-format
+#, perl-format
 msgid "failed to install %s; it will be left as %s: %s"
-msgstr "%s : échec de l'installation de %s ; conservation de %s : %s"
+msgstr "échec de l'installation de %s ; conservation de %s : %s"
 
 #: scripts/cleanup-info.pl:178
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s: unable to unlock %s: %s"
 msgstr "%s : échec du déverrouillage de %s : %s"
 
@@ -4736,18 +4736,18 @@ msgid "two modes specified: %s and --%s"
 msgstr "deux modes spécifiés : %s et --%s"
 
 #: scripts/dpkg-divert.pl:97
-#, fuzzy, perl-format
+#, perl-format
 msgid "--%s needs a divert-to argument"
-msgstr "--divert a besoin d'un paramètre détournement-vers"
+msgstr "--%s a besoin d'un paramètre détournement-vers"
 
 #: scripts/dpkg-divert.pl:99
 msgid "divert-to may not contain newlines"
 msgstr "détournement-vers ne peut pas contenir de retour chariot"
 
 #: scripts/dpkg-divert.pl:101
-#, fuzzy, perl-format
+#, perl-format
 msgid "--%s needs a <package> argument"
-msgstr "--package a besoin d'un paramètre paquet"
+msgstr "--%s a besoin d'un paramètre <paquet>"
 
 #: scripts/dpkg-divert.pl:103
 msgid "package may not contain newlines"
@@ -4755,9 +4755,9 @@ msgstr "le paquet ne peut pas contenir de retour chariot"
 
 #: scripts/dpkg-divert.pl:105 scripts/dpkg-statoverride.pl:74
 #: scripts/update-alternatives.pl:152 scripts/update-alternatives.pl:155
-#, fuzzy, perl-format
+#, perl-format
 msgid "--%s needs a <directory> argument"
-msgstr "--altdir a besoin d'un paramètre <répertoire>"
+msgstr "--%s a besoin d'un paramètre <répertoire>"
 
 #: scripts/dpkg-divert.pl:108 scripts/dpkg-statoverride.pl:86
 #: scripts/update-alternatives.pl:160
@@ -4780,9 +4780,9 @@ msgstr "paquet manque"
 
 #: scripts/dpkg-divert.pl:125 scripts/dpkg-divert.pl:153
 #: scripts/dpkg-divert.pl:195 scripts/dpkg-statoverride.pl:144
-#, fuzzy, perl-format
+#, perl-format
 msgid "--%s needs a single argument"
-msgstr "--add demande un seul paramètre"
+msgstr "--%s demande un seul paramètre"
 
 #: scripts/dpkg-divert.pl:127 scripts/dpkg-divert.pl:131
 #, perl-format
@@ -5010,9 +5010,8 @@ msgid "An override for \"%s\" already exists, "
 msgstr "Une dérogation pour « %s » existe déjà, "
 
 #: scripts/dpkg-statoverride.pl:124
-#, fuzzy
 msgid "but --force specified so will be ignored."
-msgstr "mais --force a été spécifié, donc on l'ignore."
+msgstr "mais --force a été spécifié, donc sera ignoré."
 
 #: scripts/dpkg-statoverride.pl:126
 msgid "aborting"
@@ -5138,9 +5137,9 @@ msgstr ""
 "  --version                afficher la version.\n"
 
 #: scripts/install-info.pl:97
-#, fuzzy, perl-format
+#, perl-format
 msgid "could not open stderr for output! %s"
-msgstr "Impossible d'ouvrir stderr ! %s"
+msgstr "impossible d'ouvrir stderr ! %s"
 
 #: scripts/install-info.pl:101
 #, perl-format
@@ -5148,9 +5147,9 @@ msgid "%s: --section needs two more args"
 msgstr "%s : --section a besoin de deux paramètres supplémentaires"
 
 #: scripts/install-info.pl:107
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s: option --%s is deprecated (ignored)"
-msgstr "%s : %s obsolète (ignoré)"
+msgstr "%s : l'option --%s est obsolète (ignoré)"
 
 #: scripts/install-info.pl:133
 #, perl-format
@@ -5173,7 +5172,6 @@ msgid "%s: warning, ignoring confusing INFO-DIR-ENTRY in file."
 msgstr "%s : avertissement, INFO-DIR-ENTRY déroutante ignorée dans le fichier."
 
 #: scripts/install-info.pl:200
-#, fuzzy
 msgid "invalid info entry"
 msgstr "%s : entrée info invalide"
 
@@ -5273,24 +5271,24 @@ msgid "%s: no entry for file `%s'"
 msgstr "%s : pas d'entrée pour le fichier « %s »"
 
 #: scripts/install-info.pl:493
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to install new %s: %s"
-msgstr "impossible d'installer %s en tant que %s : %s"
+msgstr "impossible d'installer le nouveau %s : %s"
 
 #: scripts/install-info.pl:496
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to unlock %s: %s"
-msgstr "impossible de fermer %s : %s"
+msgstr "impossible de verrouiller %s : %s"
 
 #: scripts/install-info.pl:498
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s: could not backup %s in %s: %s"
 msgstr "%s : impossible de sauvegarder %s dans %s : %s"
 
 #: scripts/install-info.pl:515
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to read %s: %d"
-msgstr "impossible de supprimer %s : %s"
+msgstr "impossible de lire %s : %d"
 
 #: scripts/install-info.pl:519
 #, perl-format
@@ -5308,7 +5306,7 @@ msgstr ""
 "Copyright (C) 2000-2002 Wichert Akkerman."
 
 #: scripts/update-alternatives.pl:51
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "Usage: %s [<option> ...] <command>\n"
 "\n"
@@ -5370,11 +5368,15 @@ msgstr ""
 "<nom>.\n"
 "  --all                    exécuter --config pour toutes les alternatives.\n"
 "\n"
-"<nom> est le nom dans /etc/alternatives.\n"
-"<chemin> est le nom de référence.\n"
-"<lien> est le lien pointant vers /etc/alternatives/<nom>.\n"
-"<priorité> est un entier ; les options avec des nombres élevés sont "
-"choisies.\n"
+"<lien> est le lien symbolique pointant vers /etc/alternatives/<nom>.\n"
+"  (par exemple, /usr/bin/pager)\n"
+"<nom> est le nom principal pour ce groupe de liens.\n"
+"  (par exemple, pager)\n"
+"<chemin> est l'emplacement de l'un des fichiers cibles alternatifs.\n"
+"  (par exemple, /usr/bin/less)\n"
+"<priorité> est un entier ; les options avec des nombres élevés ont une "
+"priorité\n"
+"  supérieure en mode automatique.\n"
 "\n"
 "Options :\n"
 "  --altdir <répertoire>    changer le répertoire d'alternatives.\n"
@@ -5744,90 +5746,3 @@ msgstr "retour chariot absent après %s"
 #, perl-format
 msgid "Serious problem: %s"
 msgstr "Problème grave : %s"
-
-#~ msgid "unable to create %.250s"
-#~ msgstr "impossible de créer %.250s"
-
-#~ msgid "`%s' field, reference to `%.255s': version contains ` '"
-#~ msgstr "champ « %s », référence à « %.255s » : version contenant «   »"
-
-#~ msgid "%s: can't open %s: %s"
-#~ msgstr "%s : impossible d'ouvrir %s : %s"
-
-#~ msgid "%s: can't create %s: %s"
-#~ msgstr "%s : impossible de créer %s : %s"
-
-#~ msgid "%s: error writing %s: %s"
-#~ msgstr "%s : erreur lors de l'écriture de %s : %s"
-
-#~ msgid "%s: read %s: %s"
-#~ msgstr "%s : lecture de %s : %s"
-
-#~ msgid "%s: close %s after read: %s"
-#~ msgstr "%s : fermeture de %s après lecture : %s"
-
-#~ msgid "%s: error closing %s: %s"
-#~ msgstr "%s : erreur lors de la fermeture de %s : %s"
-
-#~ msgid "%s: can't backup old %s, giving up: %s"
-#~ msgstr "%s : impossible de sauvegarder l'ancien fichier %s, abandon : %s"
-
-#~ msgid "--admindir needs a directory argument"
-#~ msgstr "--admindir a besoin d'un répertoire comme paramètre"
-
-#~ msgid "--remove needs a single argument"
-#~ msgstr "--remove demande un seul paramètre"
-
-#~ msgid "--truename needs a single argument"
-#~ msgstr "--truename a besoin d'un seul paramètre"
-
-#~ msgid "dpkg-divert: %s"
-#~ msgstr "dpkg-divert : %s"
-
-#~ msgid "You need --help"
-#~ msgstr "Vous avez besoin de --help"
-
-#~ msgid "--remove needs one arguments"
-#~ msgstr "--remove prend un paramètre"
-
-#~ msgid "dpkg-statoverride: %s"
-#~ msgstr "dpkg-statoverride : %s"
-
-#~ msgid "You need --help."
-#~ msgstr "Vous avez besoin de --help."
-
-#~ msgid "open %s: %s"
-#~ msgstr "ouverture de %s : %s"
-
-#~ msgid "read %s: %s"
-#~ msgstr "lecture de %s : %s"
-
-#~ msgid "create %s: %s"
-#~ msgstr "création de %s : %s"
-
-#~ msgid "write %s: %s"
-#~ msgstr "écriture de %s : %s"
-
-#~ msgid "close %s: %s"
-#~ msgstr "fermeture de %s : %s"
-
-#~ msgid "install new %s: %s"
-#~ msgstr "installation du nouveau %s : %s"
-
-#~ msgid "%s: unlock %s: %s"
-#~ msgstr "%s : déverrouillage de %s : %s"
-
-#~ msgid "%s: read %s: %d"
-#~ msgstr "%s : lecture de %s : %d"
-
-#~ msgid "update-alternatives: %s"
-#~ msgstr "update-alternatives : %s"
-
-#~ msgid "--admindir needs a <directory> argument"
-#~ msgstr "--admindir a besoin d'un paramètre <répertoire>"
-
-#~ msgid "failed to open %s: %s"
-#~ msgstr "échec de l'ouverture de %s : %s"
-
-#~ msgid "unable to install %s as %s"
-#~ msgstr "impossible d'installer %s en tant que %s"
