--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-22  Frédéric Bothamy  <frederic.bothamy@free.fr>
+
+	* fr.po: Updated to 916t.
+
 2006-06-22  Eddy Petrişor  <eddy.petrisor@gmail.com>
 
 	* ro.po: Updated to 916t;
