2006-06-23  Clytie Siddall <clytie@riverland.net.au>
	* ChangeLog: Updated

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-23  Clytie Siddall <clytie@riverland.net.au>
+
+	* vi.po: Updated Vietnamese translation.
+
 2006-06-22  Frédéric Bothamy  <frederic.bothamy@free.fr>
 
 	* fr.po: Updated to 916t.
