Update the Basque translation. Thanks to Piarres Beobide. Add the new Khmer translation. Thanks to Khoem Sokhem.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,12 @@
+2006-06-23  Piarres Beobide  <pi@beobide.net>
+
+	* eu.po: Updated to 916t.
+
+2006-06-23  Khoem Sokhem  <khoemsokhem@khmeros.info>
+
+	* LINGUAS: New language: Khmer.
+	* km.po: New translation: 894t22f.
+
 2006-06-23  Clytie Siddall  <clytie@riverland.net.au>
 
 	* vi.po: Updated to 916t.
