--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * French (Frédéric Bothamy).
   * Vietnamese (Clytie Siddall)
   * Dansk (Claus Hindsgaul).
+  * Khmer (Khoem Sokhem). Closes: #375099
+  * Basque (Piarres Beobide). Closes: #375118
 
  -- Guillem Jover <guillem@debian.org>  Wed, 21 Jun 2006 18:23:39 +0300
 
