--- a/po/eu.po
+++ b/po/eu.po
@@ -9,13 +9,13 @@ msgstr ""
 "Project-Id-Version: eu\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-06-21 07:26+0300\n"
-"PO-Revision-Date: 2006-06-12 22:42+0200\n"
+"PO-Revision-Date: 2006-06-22 17:26+0200\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
 "Language-Team: librezale <librezale@librezale.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.2\n"
+"X-Generator: Pootle 0.9\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: lib/compat.c:46
@@ -193,20 +193,20 @@ msgstr "ezin da joan %.250s(r)en hasierara bete ondoren"
 
 #: lib/dbmodify.c:150
 msgid "requested operation requires superuser privilege"
-msgstr "eskatutako eragiketak supererabiltzaile-pribilegioa behar du"
+msgstr "eskatutako eragiketak supererabiltzaile baimena behar du"
 
 #: lib/dbmodify.c:155
 msgid "unable to access dpkg status area"
-msgstr "ezin da sartu dpkg egoera-arean"
+msgstr "ezin da sartu dpkg egoera eremuan"
 
 #: lib/dbmodify.c:157
 msgid "operation requires read/write access to dpkg status area"
-msgstr "eragiketak dpkg egoera-arean irakurri/idazteko sarbidea behar du"
+msgstr "eragiketak dpkg egoera eremuan irakurri/idazteko sarbidea behar du"
 
 #: lib/dbmodify.c:205
 #, c-format
 msgid "failed to remove my own update file %.255s"
-msgstr "huts egin du nire %.255s eguneratze-fitxategia kentzean"
+msgstr "huts egin du nire %.255s eguneratze fitxategia kentzean"
 
 #: lib/dbmodify.c:262
 #, c-format
@@ -479,9 +479,9 @@ msgstr ""
 "gehitzea gomendatzen da"
 
 #: lib/fields.c:413 lib/fields.c:416
-#, fuzzy, c-format
+#, c-format
 msgid "`%s' field, reference to `%.255s': version contains `%c'"
-msgstr "`%s' eremua, honekiko erreferentzia: `%.255s': bertsioak `(' dauka"
+msgstr "`%s' eremua, honekiko erreferentzia: `%.255s': bertsioak `%c' dauka"
 
 #: lib/fields.c:419
 #, c-format
@@ -2402,9 +2402,9 @@ msgstr ""
 " [*] duten aukerek irteera luze bat dute - `less' edo `more' bidez erabili!"
 
 #: src/main.c:206 src/query.c:544 dpkg-deb/main.c:177 dpkg-split/main.c:157
-#, fuzzy, c-format
+#, c-format
 msgid "conflicting actions -%c (--%s) and -%c (--%s)"
-msgstr "ekintza gatazkatsuak --%s eta --%s"
+msgstr "ekintza gatazkatsuak -%c (--%s) eta -%c (--%s)"
 
 #: src/main.c:212
 #, c-format
@@ -4403,30 +4403,30 @@ msgstr "saiatu %s ezabatzen"
 
 #: scripts/cleanup-info.pl:107 scripts/install-info.pl:312
 #: scripts/update-alternatives.pl:211
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to open %s: %s"
-msgstr "Ezin da %s itxi: %s"
+msgstr "Ezin da %s ireki: %s"
 
 #: scripts/cleanup-info.pl:109 scripts/install-info.pl:482
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to create %s: %s"
-msgstr "ezin da %s ezabatu: %s"
+msgstr "ezin da %s sortu: %s"
 
 #: scripts/cleanup-info.pl:120 scripts/install-info.pl:485
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to write %s: %s"
-msgstr "ezin da %s ezabatu: %s"
+msgstr "ezin da %s idatzi: %s"
 
 #: scripts/cleanup-info.pl:160 scripts/install-info.pl:165
 #: scripts/install-info.pl:207 scripts/install-info.pl:314
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to read %s: %s"
-msgstr "ezin da %s ezabatu: %s"
+msgstr "ezin da %s irakurri: %s"
 
 #: scripts/cleanup-info.pl:161 scripts/install-info.pl:315
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to close %s after read: %s"
-msgstr "irakurri ondoren %s itxi: %s"
+msgstr "ezin da irakurri ondoren %s itxi: %s"
 
 #: scripts/cleanup-info.pl:165 scripts/install-info.pl:486
 #: scripts/update-alternatives.pl:472
@@ -4435,19 +4435,19 @@ msgid "unable to close %s: %s"
 msgstr "Ezin da %s itxi: %s"
 
 #: scripts/cleanup-info.pl:171 scripts/install-info.pl:490
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to backup old %s, giving up: %s"
 msgstr "Ezin da %s zaharraren babeskopia egin, uzten: %s"
 
 #: scripts/cleanup-info.pl:174
-#, fuzzy, perl-format
+#, perl-format
 msgid "failed to install %s; it will be left as %s: %s"
-msgstr "%s: huts %s instalatzean ; berau %s bezala uzten: %s"
+msgstr "huts %s instalatzean ; berau %s bezala uzten: %s"
 
 #: scripts/cleanup-info.pl:178
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s: unable to unlock %s: %s"
-msgstr "%s: huts %s desblokeatzean: %s"
+msgstr "%s: ezin da %s desblokeatu: %s"
 
 #: scripts/dpkg-divert.pl:12 scripts/update-alternatives.pl:33
 #, perl-format
@@ -4525,18 +4525,18 @@ msgid "two modes specified: %s and --%s"
 msgstr "bi modu ezarri dira: %s eta --%s"
 
 #: scripts/dpkg-divert.pl:97
-#, fuzzy, perl-format
+#, perl-format
 msgid "--%s needs a divert-to argument"
-msgstr "--divert-ek desbideratzeko argumentu bat behar du"
+msgstr "--%s-(e)k desbideratzeko argumentu bat behar du"
 
 #: scripts/dpkg-divert.pl:99
 msgid "divert-to may not contain newlines"
 msgstr "divert-to-ek ezin du lerro berririk eduki"
 
 #: scripts/dpkg-divert.pl:101
-#, fuzzy, perl-format
+#, perl-format
 msgid "--%s needs a <package> argument"
-msgstr "--package-k pakete argumentu bat behar du"
+msgstr "--%s-(e)k <pakete> argumentu bat behar du"
 
 #: scripts/dpkg-divert.pl:103
 msgid "package may not contain newlines"
@@ -4544,9 +4544,9 @@ msgstr "paketea ezin du lerro berririk eduki"
 
 #: scripts/dpkg-divert.pl:105 scripts/dpkg-statoverride.pl:74
 #: scripts/update-alternatives.pl:152 scripts/update-alternatives.pl:155
-#, fuzzy, perl-format
+#, perl-format
 msgid "--%s needs a <directory> argument"
-msgstr "--altdir-ek <direktorio> argumentu bat behar du"
+msgstr "--%s-(e)k <direktorio> argumentu bat behar du"
 
 #: scripts/dpkg-divert.pl:108 scripts/dpkg-statoverride.pl:86
 #: scripts/update-alternatives.pl:160
@@ -4569,9 +4569,9 @@ msgstr "paketea falta da"
 
 #: scripts/dpkg-divert.pl:125 scripts/dpkg-divert.pl:153
 #: scripts/dpkg-divert.pl:195 scripts/dpkg-statoverride.pl:144
-#, fuzzy, perl-format
+#, perl-format
 msgid "--%s needs a single argument"
-msgstr "--add-ek argumentu soil bat behar du"
+msgstr "--%s-(e)k argumentu soil bat behar du"
 
 #: scripts/dpkg-divert.pl:127 scripts/dpkg-divert.pl:131
 #, perl-format
@@ -4609,7 +4609,8 @@ msgid ""
 "  found `%s'"
 msgstr ""
 "parekatze okerra \"divert-to\"-en\n"
-"`%s' ezabatzean\\m`%s' aurkitu da"
+"`%s' ezabatzean\n"
+"`%s' aurkitu da"
 
 #: scripts/dpkg-divert.pl:159
 #, perl-format
@@ -4619,7 +4620,8 @@ msgid ""
 "  found `%s'"
 msgstr ""
 "parekatze okerra paketean\n"
-"`%s' ezabatzean\\m`%s' aurkitu da"
+"`%s' ezabatzean\n"
+"`%s' aurkitu da"
 
 #: scripts/dpkg-divert.pl:161
 #, perl-format
@@ -4792,9 +4794,8 @@ msgid "An override for \"%s\" already exists, "
 msgstr "\"%s\"-en gainidazketa badago dagoeneko, "
 
 #: scripts/dpkg-statoverride.pl:124
-#, fuzzy
 msgid "but --force specified so will be ignored."
-msgstr "baina --force ezarririk beraz alde batetara utziko da."
+msgstr "baina --force ezarri da, beraz alde batetara utziko da."
 
 #: scripts/dpkg-statoverride.pl:126
 msgid "aborting"
@@ -4914,7 +4915,7 @@ msgstr ""
 "  --version                bertsioa bistarazi.\n"
 
 #: scripts/install-info.pl:97
-#, fuzzy, perl-format
+#, perl-format
 msgid "could not open stderr for output! %s"
 msgstr "Ezin da irteera estandarra ireki! %s"
 
@@ -4924,9 +4925,9 @@ msgid "%s: --section needs two more args"
 msgstr "%s: --section needs two more args"
 
 #: scripts/install-info.pl:107
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s: option --%s is deprecated (ignored)"
-msgstr "%s: %s zaharkiturik(alde batetara utzia)"
+msgstr "%s: --%s aukera zaharkiturik (alde batetara utzia)"
 
 #: scripts/install-info.pl:133
 #, perl-format
@@ -4949,9 +4950,8 @@ msgid "%s: warning, ignoring confusing INFO-DIR-ENTRY in file."
 msgstr "%s: abisua, alde batetara uzten fitxategiko INFO-DIR-ENTRY"
 
 #: scripts/install-info.pl:200
-#, fuzzy
 msgid "invalid info entry"
-msgstr "%s: info sarrera baliogabea"
+msgstr "info sarrera baliogabea"
 
 #: scripts/install-info.pl:226
 #, perl-format
@@ -5046,24 +5046,24 @@ msgid "%s: no entry for file `%s'"
 msgstr "%s: ez dago sarerarik`%s' fitxategiarentzat"
 
 #: scripts/install-info.pl:493
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to install new %s: %s"
-msgstr "Ezin da %s %s bezala instalatu: %s"
+msgstr "Ezin da %s berria instalatu: %s"
 
 #: scripts/install-info.pl:496
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to unlock %s: %s"
-msgstr "Ezin da %s itxi: %s"
+msgstr "Ezin da %s desblokeatu: %s"
 
 #: scripts/install-info.pl:498
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s: could not backup %s in %s: %s"
 msgstr "%s: ezin da %s-en basbeskopia egin %s-en: %s"
 
 #: scripts/install-info.pl:515
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to read %s: %d"
-msgstr "ezin da %s ezabatu: %s"
+msgstr "ezin da %s irakurri: %d"
 
 #: scripts/install-info.pl:519
 #, perl-format
@@ -5081,7 +5081,7 @@ msgstr ""
 "Copyright (C) 2000-2002 Wichert Akkerman."
 
 #: scripts/update-alternatives.pl:51
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "Usage: %s [<option> ...] <command>\n"
 "\n"
@@ -5127,21 +5127,24 @@ msgstr ""
 "    [--slave <lotura> <izena> <bidea>] ...\n"
 "                           sistemara alternatiba talde bat gehitu.\n"
 "  --remove <izena> <path>   <bidea> ezabatu <izena> alternatiba taldetik.\n"
-"  --remove-all <izena>      <izena> taldea ezabatu alternatib sistematik\n"
-"  --auto <izena>            switch the master link <izena> to automatic "
-"mode.\n"
+"  --remove-all <izena>      <izena> taldea ezabatu alternatiba sistematik\n"
+"  --auto <izena>             <izena> lotura nagusia modu automatikora "
+"aldatu.\n"
 "  --display <izena>         <izena>  taldearen argibideak bistarazi.\n"
-"  --list <izena>            <izena> tadelko helburu guztiak bistarazi.\n"
+"  --list <izena>            <izena> taldeko helburu guztiak bistarazi.\n"
 "  --config <izena>          <izena> taldeko alternatibak bistarazi eta\n"
 "                           erabiltzaileari bat hautatzeko eskatu.\n"
 "  --set <izena> <path>      <bidea> ezarri <izena>-ren alternatiba bezala.\n"
 "  --all                    alternatiba guztien --config deitu.\n"
 "\n"
-"<izena> /etc/alternatives-ko izena da.\n"
-"<path> is the name referred to.\n"
-"<lotura> /etc/alternatives/<izena>-ra jozten duen lotura.\n"
-"<lehentasuna> zenbaki oso bat da; zenbaki handiago duten aukerak hautatuko "
-"dira.\n"
+"<lotura> /etc/alternatives/<izena>-ra jozten duen lotura da.\n"
+"  (adib. /usr/bin/pager)\n"
+"<izena> lotura talde horretako izen nagusia da.\n"
+"  (e.g. pager)\n"
+"<bidea> alternatiba helburu fitxategi baten kokapena da.\n"
+"  (e.g. /usr/bin/less)\n"
+"<lehentasuna> zenbaki oso bat da; zenbaki handiago duten aukerak lehentasun\n"
+"  handiagoa dute modu automatikoanhautatuko dira.\n"
 "\n"
 "Aukerak:\n"
 "  --altdir <direktorioa>     alternatiba direktorioa aldatu.\n"
@@ -5213,7 +5216,7 @@ msgstr "--slave --install-ekin batera bakarrik onartzen da"
 
 #: scripts/update-alternatives.pl:176
 msgid "manflag"
-msgstr ""
+msgstr "manflag"
 
 #: scripts/update-alternatives.pl:180
 #, perl-format
