French translation updated

--- a/man/po4a/dpkg-query.1/po/fr.po
+++ b/man/po4a/dpkg-query.1/po/fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-06-20 21:07+0200\n"
-"PO-Revision-Date: 2006-05-14 11:29+0200\n"
+"PO-Revision-Date: 2006-06-24 10:24+0200\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -123,7 +123,6 @@ msgstr "B<-l> | B<--list> I<nom-paquet-motif> ..."
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-query.1:50
-#, fuzzy
 msgid ""
 "List packages matching given pattern. If no I<package-name-pattern> is "
 "given, list all packages in I</var/lib/dpkg/status>, excluding the ones "
@@ -409,17 +408,13 @@ msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-query.1:161
-#, fuzzy
 msgid ""
 "The default format string is \\(lqB<${Package}\\et${Version}\\en>\\(rq.  "
 "Actually, all other fields found in the status file (i.e. user defined "
 "fields) can be requested, too. They will be printed as-is, though, no "
 "conversion nor error checking is done on them.  To get the name of the dpkg "
 "maintainer and the installed version, you could run:"
-msgstr ""
-"Le format par défaut est le suivant\\ : \\(lqB<${Paquet}\\et${Version}\\en>"
-"\\(rq. Pour obtenir le nom du responsable de dpkg et la version installée, "
-"exécutez par exemple :"
+msgstr "Le format par défaut est le suivant\\ : \\(lqB<${Paquet}\\et${Version}\\en>\\(rq. Tous les autres champs du fichier status, par exemple des champs définis par l'utilisateur, peuvent être demandés. Ils seront affichés mais sans aucune mise en forme et aucune vérification n'est faite. Pour obtenir le nom du responsable de dpkg et la version installée, exécutez par exemple :"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-query.1:165
