--- a/man/po4a/dpkg-source.1/po/fr.po
+++ b/man/po4a/dpkg-source.1/po/fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg.1\n"
 "POT-Creation-Date: 2006-06-20 21:07+0200\n"
-"PO-Revision-Date: 2006-05-14 11:08+0200\n"
+"PO-Revision-Date: 2006-06-24 10:13+0200\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -21,9 +21,9 @@ msgstr "dpkg-source"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg-source.1:2
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2006-05-23"
-msgstr "28-02-2006"
+msgstr "23-05-2006"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg-source.1:2
@@ -229,38 +229,30 @@ msgstr ""
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-source.1:96
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-h>,B<--help>"
-msgstr "B<-us>, B<-uc>"
+msgstr "B<-h>, B<--help>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-source.1:101
-#, fuzzy
 msgid ""
 "Display the particular program's usage message, including a synopsis of the "
 "options it understands.  This option is understood by all the source package "
 "tools."
-msgstr ""
-"Affiche la version du programme et un message d'aide qui comprend un résumé "
-"des options acceptées. Tous les outils pour les paquets source comprennent "
-"cette option."
+msgstr "Affiche le message d'aide associé au programme\\ : il comprend un résumé des options acceptées. Tous les outils pour les paquets source comprennent cette option."
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-source.1:101
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--version>"
-msgstr "B<-v>I<version>"
+msgstr "B<--version>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-source.1:106
-#, fuzzy
 msgid ""
 "Display the particular program's version, including copyright and license "
 "information.  This option is understood by all the source package tools."
-msgstr ""
-"Affiche la version du programme et un message d'aide qui comprend un résumé "
-"des options acceptées. Tous les outils pour les paquets source comprennent "
-"cette option."
+msgstr "Affiche la version du programme\\ ; le message comprend des informations sur la licence et le copyright. Tous les outils pour les paquets source comprennent cette option."
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-source.1:106
@@ -1524,11 +1516,10 @@ msgstr "B<source:Upstream-Version>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-source.1:727
-#, fuzzy
 msgid ""
 "The upstream source package version, including the Debian version epoch if "
 "any."
-msgstr "La version amont du paquet source."
+msgstr "La version amont du paquet source, avec éventuellement l'«\\ epoch\\ » de la version debian."
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-source.1:727
