--- a/man/po4a/dpkg-statoverride.8/po/fr.po
+++ b/man/po4a/dpkg-statoverride.8/po/fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-06-20 21:07+0200\n"
-"PO-Revision-Date: 2006-05-14 10:26+0200\n"
+"PO-Revision-Date: 2006-06-24 10:35+0200\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -21,9 +21,9 @@ msgstr "dpkg-statoverride"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg-statoverride.8:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2006-05-23"
-msgstr "04-05-2006"
+msgstr "23-05-2006"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg-statoverride.8:1
@@ -226,20 +226,19 @@ msgstr "B<--help>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-statoverride.8:65
-#, fuzzy
 msgid "Show usage information."
-msgstr "Afficher la version, le copyright et une aide."
+msgstr "Affiche un message d'aide."
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-statoverride.8:65
 #, no-wrap
 msgid "B<--version>"
-msgstr ""
+msgstr "B<--version>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-statoverride.8:68
 msgid "Show program version and copyright."
-msgstr ""
+msgstr "Affiche la version du programme et le copyright."
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-statoverride.8:68
