--- a/man/po4a/install-info.8/po/fr.po
+++ b/man/po4a/install-info.8/po/fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-06-20 21:07+0200\n"
-"PO-Revision-Date: 2006-05-14 10:24+0200\n"
+"PO-Revision-Date: 2006-06-24 10:38+0200\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -325,15 +325,11 @@ msgstr "B<--infodir=>I<rep-info>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/install-info.8:169
-#, fuzzy
 msgid ""
 "Specifies that the B<dir> file is, and the installed copy of the new Info "
 "file was, is or will be located in I<infodir>.  The default is B</usr/share/"
 "info/>."
-msgstr ""
-"Spécifie que le fichier B<dir> est situé dans I<rep-info>, ou que la copie "
-"installée du nouveau fichier Info était, est ou sera située dans I<rep-"
-"info>. Par défaut, c'est B</usr/info>."
+msgstr "Spécifie que le fichier B<dir> est situé dans I<infodir>, ou que la copie installée du nouveau fichier Info était, est ou sera située dans I<infodir>. Par défaut, c'est B</usr/share/info>."
 
 # type: TP
 #: ../../../man/po4a/../C/install-info.8:169
