--- a/man/po4a/start-stop-daemon.8/po/fr.po
+++ b/man/po4a/start-stop-daemon.8/po/fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-06-21 17:57+0300\n"
-"PO-Revision-Date: 2006-06-21 17:21+0300\n"
+"PO-Revision-Date: 2006-06-24 10:41+0200\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -453,15 +453,14 @@ msgstr "Cela modifie la priorité du processus avant qu'il ne soit lancé."
 
 # type: TP
 #: ../../../man/po4a/../C/start-stop-daemon.8:230
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-k>|B<--umask> I<mask>"
-msgstr "B<-s>|B<--signal> I<signal>"
+msgstr "B<-k>|B<--umask> I<mask>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/start-stop-daemon.8:233
-#, fuzzy
 msgid "This sets the umask of the process before starting it."
-msgstr "Cela modifie la priorité du processus avant qu'il ne soit lancé."
+msgstr "Cela modifie le masque utilisateur du processus avant qu'il ne soit lancé."
 
 # type: TP
 #: ../../../man/po4a/../C/start-stop-daemon.8:233
