--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,17 @@
+2006-05-24  Philippe Batailler  <philippe.batailler@free.fr>
+
+	* po4a/install-info.8/po/fr.po: Updated translation.
+	* po4a/dpkg-statoverride.8/po/fr.po: likewise.
+	* po4a/update-alternatives.8/po/fr.po: likewise.
+	* po4a/start-stop-daemon.8/po/fr.po: likewise.
+	* po4a/dpkg-source.1/po/fr.po: likewise.
+	* po4a/dpkg-divert.8/po/fr.po: likewise.
+	* po4a/dpkg-query.1/po/fr.po: likewise.
+	* po4a/dpkg-checkbuilddeps.1/po/fr.po: likewise.
+	* po4a/dpkg-deb.1/po/fr.po: likewise
+	* po4a/dpkg-cfg.5/po/fr.po: New translation.
+	* po4a/add_fr/dpkg-cfg.5.fr.add: addendum.
+	
 2006-06-21  Guillem Jover  <guillem@debian.org>
 
 	* C/start-stop-daemon.8: Document the new '--umask' option.
