--- a/man/po4a/dpkg-checkbuilddeps.1/po/fr.po
+++ b/man/po4a/dpkg-checkbuilddeps.1/po/fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-06-20 21:07+0200\n"
-"PO-Revision-Date: 2006-05-14 11:30+0200\n"
+"PO-Revision-Date: 2006-06-24 10:30+0200\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -21,9 +21,9 @@ msgstr "dpkg-checkbuilddeps"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg-checkbuilddeps.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2006-05-23"
-msgstr "28-02-2006"
+msgstr "23-05-2006"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg-checkbuilddeps.1:1
@@ -111,14 +111,14 @@ msgstr ""
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-checkbuilddeps.1:21
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-h>"
-msgstr "B<-B>"
+msgstr "B<-h>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-checkbuilddeps.1:24
 msgid "Print a usage message."
-msgstr ""
+msgstr "Affiche un message d'aide."
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-checkbuilddeps.1:25
