--- a/man/po4a/dpkg-divert.8/po/fr.po
+++ b/man/po4a/dpkg-divert.8/po/fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-06-20 21:07+0200\n"
-"PO-Revision-Date: 2006-05-14 11:26+0200\n"
+"PO-Revision-Date: 2006-06-24 10:26+0200\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -21,9 +21,9 @@ msgstr "dpkg-divert"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg-divert.8:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2006-05-23"
-msgstr "04-05-2006"
+msgstr "23-05-2006"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg-divert.8:1
@@ -221,10 +221,8 @@ msgstr "B<--help>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:69
-#, fuzzy
 msgid "Output short usage instructions, and exit successfully."
-msgstr ""
-"Affiche la version, quelques instructions d'aide, et se termine normalement."
+msgstr "Affiche quelques instructions d'aide, et se termine normalement."
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-divert.8:69
