--- a/man/po4a/update-alternatives.8/po/fr.po
+++ b/man/po4a/update-alternatives.8/po/fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-06-20 21:07+0200\n"
-"PO-Revision-Date: 2006-03-04 09:31+0100\n"
+"PO-Revision-Date: 2006-06-24 10:44+0200\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -21,9 +21,9 @@ msgstr "update-alternatives"
 
 # type: TH
 #: ../../../man/po4a/../C/update-alternatives.8:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2006-05-23"
-msgstr "28-02-2006"
+msgstr "23-05-2006"
 
 # type: TH
 #: ../../../man/po4a/../C/update-alternatives.8:8
@@ -589,7 +589,7 @@ msgstr "B<--help>"
 # type: Plain text
 #: ../../../man/po4a/../C/update-alternatives.8:297
 msgid "Give some usage information."
-msgstr ""
+msgstr "Affiche un message d'aide."
 
 # type: TP
 #: ../../../man/po4a/../C/update-alternatives.8:297
@@ -599,11 +599,8 @@ msgstr "B<--version>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/update-alternatives.8:302
-#, fuzzy
 msgid "Tell which version of B<update-alternatives> this is."
-msgstr ""
-"donne la version de B<update-alternatives> et des renseignements sur "
-"l'utilisation."
+msgstr "Cette option donne la version de B<update-alternatives>."
 
 # type: TP
 #: ../../../man/po4a/../C/update-alternatives.8:302
