[l10n] Updated Czech translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.13.23~) UNRELEASED; urgency=low
 
   [ Updated dpkg Translations ]
+  * Czech (Miroslav Kure).
   * Dutch (Bart Cornelis).
   * Hungarian (SZERVÁC Attila).
   * Romanian (Eddy Petrişor).
