--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-24  Miroslav Kure  <kurem@debian.cz>
+
+	* cs.po: Updated to 916t.
+
 2006-06-24  Khoem Sokhem  <khoemsokhem@khmeros.info>
 
 	* km.po: Updated to 916t.
