Added Dzongkha translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 dpkg (1.13.23~) UNRELEASED; urgency=low
 
+  [ Added dpkg Translations ]
+  * Dzongkha (Kinley Tshering)
+
   [ Updated dpkg Translations ]
   * Czech (Miroslav Kure).
   * Dutch (Bart Cornelis).
