French new translation

--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-01  Philippe Batailler <philippe.batailler@free.fr>
+
+	* fr.po: First translation.
+	
 2006-06-21  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-dev.pot: Regenerated.
