fr is a new language for the scripts translations.

--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,7 +1,8 @@
 2006-07-01  Philippe Batailler <philippe.batailler@free.fr>
 
 	* fr.po: First translation.
-	
+	* LINGUAS: New language: French.
+
 2006-06-21  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-dev.pot: Regenerated.
