French translation fixed

--- a/scripts/po/fr.po
+++ b/scripts/po/fr.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: dpkg scripts\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-06-21 07:29+0300\n"
-"PO-Revision-Date: 2006-07-01 08:57+0200\n"
+"PO-Revision-Date: 2006-07-02 09:00+0200\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -101,7 +101,7 @@ msgstr ""
 #: scripts/controllib.pl:214
 #, perl-format
 msgid "bad line in substvars file %s at line %d"
-msgstr "ligne %d mal formée dans le fichier substvars %s"
+msgstr "fichier substvars %s : ligne %d mal formée"
 
 #: scripts/controllib.pl:220
 #, perl-format
@@ -269,7 +269,7 @@ msgstr ""
 "Ce logiciel est un logiciel libre. Voyez la licence « GNU General Public "
 "Licence »\n"
 "dans la version 2 ou une version supérieure pour les conditions de copie. Il "
-"n'y a PAS de garantie."
+"n'y a PAS de garantie.\n"
 
 #: scripts/dpkg-architecture.pl:48
 #, perl-format
@@ -312,11 +312,10 @@ msgstr ""
 "d'environnement.\n"
 "  -u                 afficher la commande pour annuler les variables "
 "d'environnement.\n"
-"  -c <commande>      Mettre en place l'environnement et exécuter la "
+"  -c <commande>      mettre en place l'environnement et exécuter la "
 "commande.\n"
 "  --help             afficher ce message d'aide.\n"
 "  --version          afficher la version.\n"
-"          "
 
 #: scripts/dpkg-architecture.pl:71
 msgid "unable to open cputable"
@@ -370,7 +369,7 @@ msgid ""
 "system type %s"
 msgstr ""
 "Le type par défaut du système GNU %s pour l'architecture Debian %s ne "
-"correspond pas au  type du système GNU indiqué"
+"correspond pas au type du système GNU indiqué %s"
 
 #: scripts/dpkg-architecture.pl:252
 #, perl-format
@@ -399,7 +398,6 @@ msgstr ""
 "control).\n"
 "  -B                    binaire seul, ignore -Indep.\n"
 "  -h                    afficher ce message d'aide.\n"
-" "
 
 #: scripts/dpkg-checkbuilddeps.pl:69
 #, perl-format
@@ -698,7 +696,7 @@ msgstr "exécution de md5sum sur le fichier d'envoi %s"
 #: scripts/dpkg-genchanges.pl:341
 #, perl-format
 msgid "md5sum upload file %s gave strange output `%s'"
-msgstr "résultat anormal de md5sum sur le fichier d'envoi %s"
+msgstr "résultat anormal de md5sum sur le fichier d'envoi %s : « %s »"
 
 #: scripts/dpkg-genchanges.pl:344
 #, perl-format
@@ -880,7 +878,7 @@ msgstr ""
 "  -L<libdir>                 rechercher les analyseurs de changelog dans "
 "<libdir>.\n"
 "  -h, --help                 afficher ce message d'aide.\n"
-"      --version              afficher la version."
+"      --version              afficher la version.\n"
 
 #: scripts/dpkg-parsechangelog.pl:62
 #, perl-format
@@ -895,7 +893,7 @@ msgstr "impossible d'ouvrir %s pour trouver le format : %s"
 #: scripts/dpkg-parsechangelog.pl:68
 #, perl-format
 msgid "cannot fork: %s"
-msgstr "fork impossible"
+msgstr "fork impossible : %s"
 
 #: scripts/dpkg-parsechangelog.pl:73
 #, perl-format
@@ -959,7 +957,7 @@ msgstr "Répertoire de binaires %s non trouvé"
 #: scripts/dpkg-scanpackages.pl:99
 #, perl-format
 msgid "Override file %s not found"
-msgstr "Fichier override non trouvé"
+msgstr "Fichier override %s non trouvé"
 
 #: scripts/dpkg-scanpackages.pl:116
 #, perl-format
@@ -1006,7 +1004,7 @@ msgid ""
 "   ignored that one and using data from %s !\n"
 msgstr ""
 " ! Paquet %s (nom %s) répété ;\n"
-"   version ignorée, utilisation des données de %s !"
+"   version ignorée, utilisation des données de %s !\n"
 
 #: scripts/dpkg-scanpackages.pl:165
 #, perl-format
@@ -1036,12 +1034,12 @@ msgstr "%s est vide"
 #: scripts/dpkg-scanpackages.pl:210
 #, perl-format
 msgid "Couldn't open override file %s: %s"
-msgstr "Impossible d'ouvrir le fichier d'override %s"
+msgstr "Impossible d'ouvrir le fichier d'override %s : %s"
 
 #: scripts/dpkg-scanpackages.pl:232
 #, perl-format
 msgid " * Unconditional maintainer override for %s *"
-msgstr "*  Annulation inconditionnelle du responsable pour %s *"
+msgstr " * Annulation inconditionnelle du responsable pour %s *"
 
 #: scripts/dpkg-scanpackages.pl:258
 #, perl-format
@@ -1391,7 +1389,7 @@ msgstr "impossible d'ouvrir le fichier sur les bibliothèques partagées %s"
 #, perl-format
 msgid "shared libs info file `%s' line %d: bad line `%s'"
 msgstr ""
-"ligne %d du fichier sur les bibliothèques partagées %s : ligne mal formée %s"
+"fichier sur les bibliothèques partagées %s, ligne %d : ligne mal formée %s"
 
 #: scripts/dpkg-shlibdeps.pl:395
 #, perl-format
@@ -1435,7 +1433,7 @@ msgid ""
 "\n"
 "Copyright (C) 1996 Ian Jackson and Klee Dienes."
 msgstr ""
-" \n"
+"\n"
 "Copyright (C) 1996 Ian Jackson and Klee Dienes."
 
 #: scripts/dpkg-source.pl:74
