--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-05  Yuri Kozlov  <kozlov.y@gmail.com>
+
+	* ru.po: Updated to 916t.
+
 2006-07-01  Kinley Tshering  <gasepkuenden2k3@hotmail.com>
 
 	* dz.po: Added with 916t.
